microservices/k8s/bank-manifest.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# ----------------------------------------------------------
# WARNING: This file is autogenerated. Do not manually edit.
# ----------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankservice
spec:
  selector:
    matchLabels:
      app: bankservice
  template:
    metadata:
      labels:
        app: bankservice
        project: elastic
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: bankservice
        image: joaoemilio/bank-service:1.0.1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bankservice
spec:
  type: ClusterIP
  selector:
    app: bankservice
  ports:
  - name: http
    port: 5000
    targetPort: 5000
